Solved problem with whitespaces

--- a/slides/less/modules/instmatters.less
+++ b/slides/less/modules/instmatters.less
@@ -9,7 +9,7 @@
 }
 
 .reveal pre {
-  white-space: pre-line;
+  white-space: pre-wrap;
 }
 
 .unstyled {
